Add documents and change-password functionality
