# public/swagger.json
@@ -10,6 +10,14 @@
   {
    "name": "auth",
    "description": "Everything about authentication"
+  },
+  {
+   "name": "users",
+   "description": "Everything about users"
+  },
+  {
+   "name": "documents",
+   "description": "Everything about documents"
   }
  ],
  "schemes": [
@@ -187,6 +195,80 @@
      },
      "500": {
       "description": "Something went wrong | Invalid token"
+     }
+    }
+   }
+  },
+  "/document": {
+   "post": {
+    "tags": [
+     "documents"
+    ],
+    "summary": "Add user document",
+    "description": "Add user document with name field",
+    "operationId": "addDocument",
+    "parameters": [
+     {
+      "name": "name",
+      "in": "formData",
+      "description": "The user document",
+      "required": true,
+      "type": "string"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "Add document went successful"
+     },
+     "404": {
+      "description": "Route not found"
+     },
+     "500": {
+      "description": "Something went wrong"
+     }
+    }
+   }
+  },
+  "/users/change-password": {
+   "post": {
+    "tags": [
+     "users"
+    ],
+    "summary": "Change user password",
+    "description": "An user can change his password but he needs be authenticated.",
+    "operationId": "changePassword",
+    "parameters": [
+     {
+      "name": "email",
+      "in": "formData",
+      "description": "The user email",
+      "required": true,
+      "type": "string"
+     },
+     {
+      "name": "password",
+      "in": "formData",
+      "description": "The old user password",
+      "required": true,
+      "type": "string"
+     },
+     {
+      "name": "newPassword",
+      "in": "formData",
+      "description": "The new user password",
+      "required": true,
+      "type": "string"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "User registration went successful"
+     },
+     "404": {
+      "description": "Route not found"
+     },
+     "500": {
+      "description": "Something went wrong"
      }
     }
    }
